--- a/{{cookiecutter.repo_name}}/makefile-npm
+++ b/{{cookiecutter.repo_name}}/makefile-npm
@@ -18,7 +18,7 @@ PACKAGE := .package/$(shell node -p 'const p=require("./package.json"); `$${p.na
   utest \
 	clean
 
-build: $(build_files)
+build: dist
 
 lambda: build
 	npm run lambda
@@ -29,13 +29,13 @@ clean:
 	npm run build:clean
 	rm -f $(PACKAGE)
 
-utest:
+utest: node_modules
 	npm run test
 
 node_modules: package.json
 	npm i && touch node_modules
 
-$(build_files): $(source_files) node_modules
+dist: $(source_files) node_modules
 	npm run build
 
 $(PACKAGE): $(build_files)
