--- a/{{cookiecutter.repo_name}}/package.json
+++ b/{{cookiecutter.repo_name}}/package.json
@@ -47,6 +47,7 @@
     "npm-audit-resolver": "^2.1.0",
     "pino": "^5.16.0",
     "prettier": "^1.19.1",
+    "sinon-chai": "^3.4.0",
     "ts-mocha": "^6.0.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
