--- a/{{cookiecutter.repo_name}}/package.json
+++ b/{{cookiecutter.repo_name}}/package.json
@@ -23,34 +23,30 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-typescript": "^7.7.2",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.7",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
-    "babel-plugin-module-resolver": "^3.2.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
-    "eslint-import-resolver-babel-module": "^5.1.0",
-    "eslint-plugin-mocha": "^6.2.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
     "markdownlint": "^0.17.2",
+    "markdownlint-cli": "^0.22.0",
     "mocha": "^6.2.2",
     "npm-audit-resolver": "^2.1.0",
-    "pino": "^5.16.0",
     "prettier": "^1.19.1",
+    "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "ts-mocha": "^6.0.0",
     "ts-node": "^8.4.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "typescript-eslint": "0.0.1-alpha.0"
   },
   "repository": {
     "type": "git",
