--- a/{{cookiecutter.repo_name}}/.eslintrc.yml
+++ b/{{cookiecutter.repo_name}}/.eslintrc.yml
@@ -1,19 +1,21 @@
-
-parser: '@typescript-eslint/parser'
-root: true
-parserOptions:
-  ecmaVersion: 2018,
-  sourceType: module
-plugins:
-  - '@typescript-eslint'
 env:
-  es6: true,
-  node: true,
+  node: true
+  es6: true
 extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
   - prettier/@typescript-eslint
   - plugin:prettier/recommended
+globals:
+  Atomics: readonly
+  SharedArrayBuffer: readonly
+parser: '@typescript-eslint/parser'
+parserOptions:
+  ecmaVersion: 2018
+  sourceType: module
+root: true
+plugins:
+  - '@typescript-eslint'
 rules:
   quotes:
     - error
@@ -36,8 +38,3 @@ rules:
     - allowDestructuring: true
       allowedNames:
         - self
-
-
-
-
-
