Remove path from tsconfig

--- a/{{cookiecutter.repo_name}}/tsconfig.json
+++ b/{{cookiecutter.repo_name}}/tsconfig.json
@@ -1,17 +1,24 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
+    // Base directory to resolve non-absolute module names
     "baseUrl": "src",
+    // "incremental": true
+    // Generates corresponding '.d.ts' file
     "declaration": true,
+    // Implies allowSyntheticDefaultImports: true
     "esModuleInterop": true,
     "lib": ["es6", "esnext.asynciterable"],
     "module": "commonjs",
     "types": ["node", "mocha"],
+    // Raise error on expressions and declarations with an implied 'any' type.
     "noImplicitAny": false,
+    // Redirect output structure to the directory
     "outDir": "dist",
-    "paths": {
-      "~/*": ["/src/*"]
-    },
+    // Lookup locations relative to the 'baseUrl'
+    // Makes vscode happy but you still need a module resolver (babel) for complilation.
+    // "paths": {
+    //   "~/*": ["*"]
+    // },
     "sourceMap": true,
     "strict": true,
     "target": "esnext"
