--- a/{{cookiecutter.repo_name}}/package.json
+++ b/{{cookiecutter.repo_name}}/package.json
@@ -2,51 +2,70 @@
   "name": "{{ cookiecutter.repo_name }}",
   "version": "0.1.0",
   "description": "{{ cookiecutter.repo_description }}",
-  "main": "./dist/index.js",
+  "main": "./dist/src/index.js",
   "private": true,
   "scripts": {
     "audit-checker": "check-audit",
     "audit-resolver": "resolve-audit",
     "build": "npm run build:clean && npm run build:dist",
     "build:clean": "rimraf dist",
-    "build:dist": "tsc",
-    "lambda": "rimraf lambda && (cp -r dist lambda && cp package*.json ./lambda) && (cd ./lambda && npm ci --production)",
+    "build:dist": "ttsc",
+    "lambda": "rimraf lambda && (cp -r dist/src lambda && cp package*.json ./lambda) && (cd ./lambda && npm ci --production)",
     "format": "npm run format:prettier",
     "format:prettier": "prettier --write '**/*.{ts,js,md,json}'",
-    "test": "mocha test",
-    "test:cov": "nyc npm test",
+    "test": "env TS_NODE_COMPILER=ttypescript mocha --config .mocharc-tsnode.yml",
+    "test:cov": "env TS_NODE_COMPILER=ttypescript nyc npm run test",
+    "dist:test": "mocha --config .mocharc-dist.yml",
+    "dist:test:cov": "nyc npm run dist:test",
     "lint": "npm run lint:mdlint && npm run lint:eslint",
-    "lint:mdlint": "markdownlint '*.md'",
+    "lint:mdlint": "[ -f .markdownlint.yaml ] && markdownlint .",
     "lint:eslint": "eslint --cache --ext .ts ./",
-    "type-check": "tsc --noEmit",
+    "start:debug": "nodemon --inspect=5858 -r ./src/index.ts",
+    "start:watch": "nodemon ./src/index.ts",
+    "type-check": "ttsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/chai": "^4.2.5",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.7",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
+    "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/eslint": "^6.1.8",
+    "@types/eslint-plugin-prettier": "^2.2.0",
+    "@types/lodash": "^4.14.149",
+    "@types/markdownlint": "^0.13.0",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.5",
+    "@types/nodemon": "^1.19.0",
+    "@types/prettier": "^1.19.0",
+    "@types/sinon": "^7.5.2",
+    "@types/sinon-chai": "^3.2.3",
+    "@types/source-map-support": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-mocha": "^6.2.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
-    "markdownlint": "^0.17.2",
+    "markdownlint": "^0.19.0",
     "markdownlint-cli": "^0.22.0",
-    "mocha": "^6.2.2",
-    "npm-audit-resolver": "^2.1.0",
-    "prettier": "^1.19.1",
-    "sinon": "^8.1.1",
-    "sinon-chai": "^3.4.0",
-    "ts-mocha": "^6.0.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.7.2",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "mocha": "^7.1.1",
+    "nodemon": "^2.0.2",
+    "npm-audit-resolver": "^2.2.0",
+    "nyc": "^15.0.0",
+    "prettier": "^2.0.2",
+    "sinon": "^9.0.1",
+    "sinon-chai": "^3.5.0",
+    "source-map-support": "^0.5.16",
+    "ts-mocha": "^7.0.0",
+    "ts-node": "^8.6.2",
+    "ttypescript": "^1.5.10",
+    "typescript": "^3.8.3",
+    "typescript-eslint": "0.0.1-alpha.0",
+    "typescript-transform-paths": "^1.1.14"
   },
   "repository": {
     "type": "git",
