Fix lint. Update eslint/prettier.

--- a/{{cookiecutter.repo_name}}/.prettierignore
+++ b/{{cookiecutter.repo_name}}/.prettierignore
@@ -1,6 +1,7 @@
-/dist/
-/node_modules/
-.markdownlint.json
-.nyc_output
-.serverless
+dist/
+node_modules/
+lambda/
+.nyc_output/
+.serverless/
+.aws-sam/
 package-lock.json
