--- a/{{cookiecutter.repo_name}}/makefile-npm
+++ b/{{cookiecutter.repo_name}}/makefile-npm
@@ -16,8 +16,8 @@ PACKAGE := .package/$(shell node -p 'const p=require("./package.json"); `$${p.na
 	build \
 	package \
   clean \
+	lint \
   utest \
-  lambda \
   develop \
 
 build: dist
@@ -31,12 +31,17 @@ clean:
 utest: node_modules
 	npm run test
 
+lint: node_modules
+	npm run lint
+
+# For servers (express server, etc.)
 develop: node_modules
 	npm run start:watch | pino-pretty
 
 node_modules: package.json
 	npm i && touch node_modules
 
+# For lambda functions
 lambda: build
 	npm run lambda
 
