Update lambda so ts files are removed

--- a/{{cookiecutter.repo_name}}/package.json
+++ b/{{cookiecutter.repo_name}}/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build:clean && npm run build:dist",
     "build:clean": "rimraf dist",
     "build:dist": "ttsc",
-    "lambda": "rimraf lambda && (cp -r dist/src lambda && cp package*.json ./lambda) && (cd ./lambda && npm ci --production)",
+    "lambda": "rimraf lambda && cpx 'dist/src/**/*.js' lambda && cpx 'package*.json' lambda && cd lambda && npm ci --production",
     "format": "npm run format:prettier",
     "format:prettier": "prettier --write '**/*.{ts,js,md,json}'",
     "test": "env TS_NODE_COMPILER=ttypescript mocha --config .mocharc-tsnode.yml",
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^2.24.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "cpx": "^1.5.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
