--- a/{{cookiecutter.repo_name}}/package.json
+++ b/{{cookiecutter.repo_name}}/package.json
@@ -1,72 +1,71 @@
 {
   "name": "{{ cookiecutter.repo_name }}",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "{{ cookiecutter.repo_description }}",
   "main": "./dist/src/index.js",
   "private": true,
   "scripts": {
     "audit-checker": "check-audit",
     "audit-resolver": "resolve-audit",
-    "build": "npm run build:clean && npm run build:dist",
-    "build:clean": "rimraf dist",
-    "build:dist": "ttsc",
+    "build": "npm run compile:clean && npm run compile:dist",
+    "compile:clean": "rimraf dist",
+    "compile:dist": "ttsc",
+    "compile:watch": "ttsc -w",
     "lambda": "rimraf lambda && cpx 'dist/src/**/*.js' lambda && cpx 'package*.json' lambda && cd lambda && npm ci --production",
     "format": "npm run format:prettier",
     "format:prettier": "prettier --write '**/*.{ts,js,md,json}'",
-    "test": "env TS_NODE_COMPILER=ttypescript mocha --config .mocharc-tsnode.yml",
-    "test:cov": "env TS_NODE_COMPILER=ttypescript nyc npm run test",
-    "dist:test": "mocha --config .mocharc-dist.yml",
-    "dist:test:cov": "nyc npm run dist:test",
+    "test:tsnode": "env TS_NODE_COMPILER=ttypescript mocha --config .mocharc-tsnode.yml",
+    "test:tsnode:cov": "env TS_NODE_COMPILER=ttypescript nyc npm run test",
+    "test": "mocha --config .mocharc.yml",
+    "test:cov": "nyc npm run test",
     "lint": "npm run lint:mdlint && npm run lint:eslint",
     "lint:mdlint": "[ -f .markdownlint.yaml ] && markdownlint .",
     "lint:eslint": "eslint --cache --ext .ts ./",
-    "start:debug": "nodemon --inspect=5858 -r ./src/index.ts",
-    "start:watch": "nodemon ./src/index.ts",
-    "type-check": "ttsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch"
+    "start": "ttsc && node dist/src/server.js",
+    "start:debug": "ttsc && node --inspect=localhost:9229 dist/src/server.js",
+    "start:watch": "ttsc -w & nodemon -q -w dist/src dist/src/server.js",
+    "start:watch:tsnode": "nodemon --config nodemon-tsnode.json ./src/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/eslint": "^6.1.8",
-    "@types/eslint-plugin-prettier": "^2.2.0",
-    "@types/lodash": "^4.14.149",
+    "@types/chai": "^4.2.12",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/cpx": "^1.5.1",
+    "@types/eslint": "^7.2.2",
+    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/markdownlint": "^0.13.0",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.9.5",
-    "@types/nodemon": "^1.19.0",
-    "@types/prettier": "^1.19.0",
-    "@types/sinon": "^7.5.2",
-    "@types/sinon-chai": "^3.2.3",
-    "@types/source-map-support": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.1",
+    "@types/prettier": "^2.1.1",
+    "@types/sinon": "^9.0.5",
+    "@types/sinon-chai": "^3.2.4",
+    "@types/source-map-support": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "cpx": "^1.5.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-mocha": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "markdownlint": "^0.19.0",
-    "markdownlint-cli": "^0.22.0",
-    "mocha": "^7.1.1",
-    "nodemon": "^2.0.2",
-    "npm-audit-resolver": "^2.2.0",
-    "nyc": "^15.0.0",
-    "prettier": "^2.0.2",
-    "sinon": "^9.0.1",
+    "markdownlint": "^0.20.4",
+    "markdownlint-cli": "^0.23.2",
+    "mocha": "^8.1.3",
+    "npm-audit-resolver": "^2.2.1",
+    "nyc": "^15.1.0",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
+    "sinon": "^9.0.3",
     "sinon-chai": "^3.5.0",
-    "source-map-support": "^0.5.16",
-    "ts-mocha": "^7.0.0",
-    "ts-node": "^8.6.2",
-    "ttypescript": "^1.5.10",
-    "typescript": "^3.8.3",
+    "source-map-support": "^0.5.19",
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.0.3",
     "typescript-eslint": "0.0.1-alpha.0",
-    "typescript-transform-paths": "^1.1.14"
+    "typescript-transform-paths": "^2.0.1"
   },
   "repository": {
     "type": "git",
