--- a/{{cookiecutter.repo_name}}/.eslintrc.yml
+++ b/{{cookiecutter.repo_name}}/.eslintrc.yml
@@ -17,6 +17,7 @@ parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
+  project: tsconfig.json
 root: true
 plugins:
   - '@typescript-eslint'
@@ -36,6 +37,8 @@ rules:
   semi:
     - error
     - never
+  '@typescript-eslint/await-thenable':
+    - error
   '@typescript-eslint/member-delimiter-style':
     - error
     - multiline:
