--- a/{{cookiecutter.repo_name}}/.mocharc-tsnode.yml
+++ b/{{cookiecutter.repo_name}}/.mocharc-tsnode.yml
@@ -1,6 +1,9 @@
 require:
   # To use ttsc run mocha setting compiler env:
-  #    env TS_NODE_COMPILER=ttypescript mocha
+  #    env TS_NODE_COMPILER=ttypescript
+  # Example:
+  #    env TS_NODE_COMPILER=ttypescript mocha --config .mocharc-tsnode.yml
+  #
   - ts-node/register
   - source-map-support/register
   - test/_include.ts
