--- a/{{cookiecutter.repo_name}}/.vscode/settings.json
+++ b/{{cookiecutter.repo_name}}/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "javascript.format.enable": false,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "mochaExplorer.env": {
+    "TS_NODE_COMPILER": "ttypescript"
+  },
+  "files.autoSave": "onFocusChange"
 }
