--- a/{{cookiecutter.repo_name}}/package.json
+++ b/{{cookiecutter.repo_name}}/package.json
@@ -9,7 +9,7 @@
     "audit-resolver": "resolve-audit",
     "build": "npm run compile:clean && npm run compile:dist",
     "compile:clean": "rimraf dist",
-    "compile:dist": "ttsc",
+    "compile": "ttsc",
     "compile:watch": "ttsc -w",
     "lambda": "rimraf lambda && cpx 'dist/src/**/*.js' lambda && cpx 'package*.json' lambda && cd lambda && npm ci --production",
     "format": "npm run format:prettier",
@@ -21,8 +21,8 @@
     "lint": "npm run lint:mdlint && npm run lint:eslint",
     "lint:mdlint": "[ -f .markdownlint.yaml ] && markdownlint .",
     "lint:eslint": "eslint --cache --ext .ts ./",
-    "start": "ttsc && node dist/src/server.js",
-    "start:debug": "ttsc && node --inspect=localhost:9229 dist/src/server.js",
+    "start": "node dist/src/server.js",
+    "start:debug": "node --inspect=localhost:9229 dist/src/server.js",
     "start:watch": "ttsc -w & nodemon -q -w dist/src dist/src/server.js",
     "start:watch:tsnode": "nodemon --config nodemon-tsnode.json ./src/index.ts"
   },
