--- a/{{cookiecutter.repo_name}}/makefile-npm
+++ b/{{cookiecutter.repo_name}}/makefile-npm
@@ -18,7 +18,9 @@ PACKAGE := .package/$(shell node -p 'const p=require("./package.json"); `$${p.na
   clean \
 	lint \
   utest \
-  develop \
+  server-develop \
+  server-debug \
+  watch
 
 build: dist
 
@@ -35,8 +37,12 @@ lint: node_modules
 	npm run lint
 
 # Make sure code is compiled, start server, watch for code changes
-develop: dist
+server-develop: dist
 	npm run start:watch | pino-pretty
+
+# Make sure code is compiled, start server (no watch) with inspector port
+server-debug: dist
+	npm run start:debug | pino-pretty
 
 # Make sure code is compiled and watch for code changes
 watch: dist
