Add vscode tasks and lerna stuff in makefile

--- a/{{cookiecutter.repo_name}}/makefile
+++ b/{{cookiecutter.repo_name}}/makefile
@@ -1,4 +1,11 @@
 # -*- mode: Makefile -*-
 #
+
+# For lerna projects set LERNA=true
+ifeq ($(USE_LERNA),true)
+PACKAGE_NAME := $(shell node -p 'require("./package.json")'.name)
+NPM_INSTALL=lerna bootstrap --scope $(PACKAGE_NAME)
+endif
+
 include ./makefile-npm
 
