--- a/{{cookiecutter.repo_name}}/makefile-npm
+++ b/{{cookiecutter.repo_name}}/makefile-npm
@@ -12,6 +12,9 @@ build_files := $(source_files:src/%.ts=dist/%.js)
 # .package/<name>.tgz
 PACKAGE := .package/$(shell node -p 'const p=require("./package.json"); `$${p.name}-$${p.version}.tgz`')
 
+# For lerna: NPM_INSTALL=lerna bootstrap --scope <scope>
+PACKAGE_OUTPUT_BUCKET?=npm install
+
 .PHONY: \
 	build \
 	package \
@@ -27,7 +30,7 @@ build: dist
 package: $(PACKAGE)
 
 clean:
-	npm run build:clean
+	npm run compile:clean
 	rm -f $(PACKAGE)
 
 utest: node_modules dist
@@ -49,7 +52,7 @@ watch: dist
 	npm run compile:watch
 
 node_modules: package.json
-	npm i && touch node_modules
+	$(NPM_INSTALL) && touch node_modules
 
 # For lambda functions
 lambda: build
