--- a/{{cookiecutter.repo_name}}/makefile-npm
+++ b/{{cookiecutter.repo_name}}/makefile-npm
@@ -13,7 +13,7 @@ build_files := $(source_files:src/%.ts=dist/%.js)
 PACKAGE := .package/$(shell node -p 'const p=require("./package.json"); `$${p.name}-$${p.version}.tgz`')
 
 # For lerna: NPM_INSTALL=lerna bootstrap --scope <scope>
-PACKAGE_OUTPUT_BUCKET?=npm install
+NPM_INSTALLgi?=npm install
 
 .PHONY: \
 	build \
